--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "router-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://<Shivam-Gujjar-Boy>.github.io/<Note-Keeping-Application>",
+  "homepage": "https://Shivam-Gujjar-Boy.github.io/Note-Keeping-Application",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
